--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('bkg.jpg');
+    /*background-image: url('bkg.jpg');*/
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; /* Prevents the background from repeating */
